--- a/debian/emacsclient.desktop
+++ b/debian/emacsclient.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=@MENU_TITLE@ (client)
 GenericName=Emacs
 Comment=GNU @MENU_TITLE@ Client
-Exec=/usr/bin/emacsclient.@BIN_NAME@ -c -a @BIN_NAME@
+Exec=/usr/bin/emacsclient.@BIN_NAME@ -c -a ''
 TryExec=@BIN_NAME@
 Terminal=false
 Type=Application
