--- a/debian/rules
+++ b/debian/rules
@@ -123,7 +123,7 @@ else
   CFLAGS += -O2
 endif
 
-LDFLAGS   := -g -Wl,--as-needed
+LDFLAGS   := -g -Wl,--as-needed -znocombreloc
 
 INSTALL = install
 
