--- a/debian/rules
+++ b/debian/rules
@@ -132,10 +132,6 @@ confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 target := $(DEB_HOST_GNU_TYPE)
 movemail_bin := usr/lib/emacs/${runtime_ver}/${target}/movemail
 
-# Info files that are going to show up in the main dir.
-main_dir_info_files := $(shell grep '^$$(infodir)/' doc/misc/Makefile.in | \
-	sed -e "s%\$$(infodir)/\([^:]*\).*$$%\1%" | sort) emacs eintr elisp
-
 PACKAGES=${bin_name} ${bin_name}-nox ${bin_name}-lucid ${bin_name}-el ${bin_name}-common ${bin_name}-bin-common ${bin_name}-gtk ${bin_name}-dbg
 
 # Build directories
@@ -518,10 +514,9 @@ install: build $(DEBPKGFILES)
 
 	# Mangle info files
 	chmod 755 debian/mangle-info
-	for f in ${main_dir_info_files} ; do \
+	for f in $(EMACS_COMMON)/usr/share/info/${info_emacsdir}/*.info ; do \
 		DEBIAN_INFO_PREFIX=${info_emacsdir} \
-		debian/mangle-info \
-		$(EMACS_COMMON)/usr/share/info/${info_emacsdir}/$$f ; \
+		debian/mangle-info $$f ; \
 	done
 
 	# Install changelogs -- remove this for stable Emacs releases
